--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   logging: ^1.0.1
   meta: ^1.3.0
   shared_preferences: ^2.0.5
+  localstorage: ^4.0.0+1
+
+  flutter_widget_from_html_core: ^0.6.1
 
   flutter_svg: ^0.22.0
   google_fonts: ^2.0.0
@@ -43,7 +46,6 @@ dependencies:
   equatable: ^2.0.0
 
   flutter_bloc: ^7.0.0
-  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
