--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   logging: ^1.0.1
   localstorage: ^4.0.0+1
   flutter_widget_from_html_core: ^0.6.1
+  fl_chart: ^0.36.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
