--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_widget_from_html_core: ^0.6.1
   fl_chart: ^0.36.1
   flutter_svg: ^0.22.0
+  spring_button: ^2.0.0
+  smooth_page_indicator: ^0.3.0-nullsafety.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
