--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^0.22.0
   spring_button: ^2.0.0
   smooth_page_indicator: ^0.3.0-nullsafety.0
+  flutter_map: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,8 +48,13 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.0.3
   mobx_codegen:
+  vector_math: any
 
   lint: ^1.5.3
+
+  # flutter_map_tile_caching:
+  #       git:
+  #           url: https://github.com/JaffaKetchup/flutter_map_tile_caching
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -60,6 +66,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
+    - asset/
     - asset/image/
     - asset/icon/
     - asset/svg/
